completed the culculation logic of the total amount of the order