@@ -8,7 +8,9 @@ import com.assignment.productmanagementservice.domain.orderItem.entity.OrderItem
 import com.assignment.productmanagementservice.domain.product.entity.Product;
 import org.mapstruct.Mapper;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Mapper(componentModel = "spring")
 public interface OrderMapper {
@@ -19,28 +21,38 @@ public interface OrderMapper {
             return null;
         }
 
-        List<OrderItemDto> orderItemDtos = requestBody.getOrderItems();
+        Order.OrderBuilder order = Order.builder();
+        if (requestBody.getOrderItems() != null) {
+//            order.orderItems(requestBody.getOrderItems().stream()
+//                    .map(orderItem -> {
+//                        return OrderItemDto.Post.builder()
+//                                .productId(orderItem.getProductId())
+//                                .quantity(orderItem.getQuantity())
+//                                .build();
+//                    }).collect(Collectors.toList()));
+            List<OrderItem> orderItems = requestBody.getOrderItems().stream()
+                    .map(orderItemDto -> {
+                        OrderItem orderItem = OrderItem.builder()
+                                .quantity(orderItemDto.getQuantity())
+                                .build();
+                        orderItem.setOrder(order.build()); // Order와 OrderItem 간의 양방향 관계 설정
 
-        Order order = new Order();
+                        // Product 엔티티를 참조하는 productId 필드 대신에 해당 Product의 식별자(ID)를 할당
+                        Product product = new Product();
+                        product.setProductId(orderItemDto.getProductId());
+                        orderItem.setProduct(product);
 
-        List<OrderItem> orderItems = orderItemDtos.stream()
-                .map(this::orderItemDtoToOrderItem)
-                .toList();
+                        return orderItem;
+                    })
+                    .collect(Collectors.toList());
 
-        order.setOrderItems(orderItems);
-        return order;
-    }
-    default OrderItem orderItemDtoToOrderItem(OrderItemDto orderItemDto) {
-        OrderItem orderItem = new OrderItem();
-
-        Product product = new Product();
-        product.setProductId(orderItemDto.getProductId());
-//        product.setPrice(orderItemDto);
-
-        orderItem.setProduct(product);
-        orderItem.setQuantity(orderItemDto.getQuantity());
-
-        return orderItem;
+            order.orderItems(orderItems);
+        }
+//        order.productId(orderItemPostDtoToOrderItem(requestBody.getProductId()));
+//        order.quantity(orderItemPostDtoToOrderItem(requestBody.getQuantity()));
+        order.deliveryFee(3000L);
+//        order.coupons();
+        return order.build();
     }
 
     // response
@@ -49,22 +61,27 @@ public interface OrderMapper {
             return null;
         }
 
-        List<OrderItem> orderItems = order.getOrderItems();
-        List<OrderItemDto> orderItemDtos = orderItems.stream()
-                .map(this::orderItemToOrderItemDto)
-                .toList();
+        OrderResponseDto.OrderResponseDtoBuilder response = OrderResponseDto.builder();
+        if (order.getOrderId() == null) {
+            response.orderId(order.getOrderId());
+        }
+//        response.productId(orderItemToResponse(order.getProductId()));
+//        response.quantity(orderItemToResponse(order.getQuantity()));
+        response.orderId(order.getOrderId());
 
-        return OrderResponseDto.builder()
-                .orderItems(orderItemDtos)
-                .deliveryFee(order.getDeliveryFee())
-                .totalAmount(order.getTotalAmount())
-                .build();
-    }
+        if (order.getOrderItems() != null) {
+            response.orderItems(order.getOrderItems().stream()
+                    .map(orderItem -> {
+                        return OrderItemDto.Response.builder()
+                                .productId(orderItem.getProduct().getProductId())
+                                .quantity(orderItem.getQuantity())
+                                .build();
+                    }).collect(Collectors.toList()));
+        }
+        response.deliveryFee(order.getDeliveryFee());
+        response.totalAmount(order.getTotalAmount());
+        response.appliedCoupon(null); // TODO 일단 null
 
-    default OrderItemDto orderItemToOrderItemDto(OrderItem orderItem) {
-        return OrderItemDto.builder()
-                .productId(orderItem.getProduct().getProductId())
-                .quantity(orderItem.getQuantity())
-                .build();
+        return response.build();
     }
 }
